# advent-of-code-2021

cpp/: CMakeLists.txt  input_big.h  main.cpp  types.h
cpp/day_12/: main.cpp
cpp/day_5/: input_small.h
cpp/day_6/: input_big.h  input_small.h  main.cpp  types.h
cpp/day_7/: input_big.h  input_small.h  main.cpp  types.h
cpp/day_9/: main.cpp
scala3/: build.sbt
scala3/src/main/resources/: 24p1.txt
scala3/src/main/scala/: 03p1.scala  03p2.scala  06.scala  07.scala  08.scala  08p2.scala  08p2BF.scala  09.scala  10.scala  11.scala  12.scala  13.scala  14.scala  15.scala  16.scala  17.scala  18.scala  19.scala  20.scala  21.scala  22.scala  23.scala  24.scala  25.scala
src/main/scala/: 01.scala  02.scala  03.scala  04.scala
src/test/scala/: Test1.scala
